// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render PWM_CONTROL correctly with default value to N/A 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "lowerbound": 0,
        "upperbound": 100,
      },
      "id": "id",
      "type": "PWM_CONTROL",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <DataChannelAdapter__Wrapper>
    <div
      className="DataChannelAdapter__Wrapper-kOWMLp jIklWG"
    >
      <ControlPeriod
        onChange={[Function]}
        onSubmit={[Function]}
        placeholder="Integer only"
        value=""
      >
        <ControlPeriod__Container>
          <div
            className="ControlPeriod__Container-jNmifR bLOshQ"
          >
            <label
              htmlFor="input"
            >
              <P
                color="grayBase"
              >
                <Component
                  className="P__P-KJbCR hrSHif"
                  color="grayBase"
                >
                  <p
                    className="P__P-KJbCR hrSHif"
                    color="grayBase"
                  >
                    Period
                  </p>
                </Component>
              </P>
            </label>
            <ControlPeriod__InputWrapper>
              <div
                className="ControlPeriod__InputWrapper-icIPmx diDDNv"
              >
                <ControlPeriod__StyledInput
                  onChange={[Function]}
                  placeholder="Integer only"
                  type="number"
                  value=""
                >
                  <Input
                    className="ControlPeriod__StyledInput-fNvBTX jSwXqv"
                    focus={false}
                    kind="primary"
                    onChange={[Function]}
                    placeholder="Integer only"
                    type="number"
                    value=""
                  >
                    <input
                      className="ControlPeriod__StyledInput-fNvBTX jSwXqv Input__Input-ixjKAz dDXeoZ"
                      kind="primary"
                      onChange={[Function]}
                      placeholder="Integer only"
                      type="number"
                      value=""
                    />
                  </Input>
                </ControlPeriod__StyledInput>
                <Button
                  active={false}
                  block={false}
                  component="button"
                  disabled={false}
                  kind="primary"
                  onClick={[Function]}
                  round={false}
                  size="normal"
                  square={false}
                >
                  <BaseComponent
                    active={false}
                    block={false}
                    className="Button__Button-jkHDFw fcrwCh"
                    component="button"
                    disabled={false}
                    kind="primary"
                    onClick={[Function]}
                    round={false}
                    size="normal"
                    square={false}
                  >
                    <button
                      className="Button__Button-jkHDFw fcrwCh"
                      onClick={[Function]}
                    >
                      Ok
                    </button>
                  </BaseComponent>
                </Button>
              </div>
            </ControlPeriod__InputWrapper>
          </div>
        </ControlPeriod__Container>
      </ControlPeriod>
      <ControlRange
        labels={
          Array [
            0,
            100,
          ]
        }
        onChange={[Function]}
        onSubmit={[Function]}
        value=""
        valueMapper={[Function]}
      >
        <ControlRange__Container>
          <div
            className="ControlRange__Container-ispxkc kQpIsI"
          >
            <ControlRange__LabelWrapper
              labels={
                Array [
                  0,
                  100,
                ]
              }
            >
              <div
                className="ControlRange__LabelWrapper-hpKjGx bfHWDZ"
              >
                <ControlRange__LabelItem>
                  <div
                    className="ControlRange__LabelItem-kiIalK dulPtE"
                  >
                    <P
                      color="grayBase"
                    >
                      <Component
                        className="P__P-KJbCR hrSHif"
                        color="grayBase"
                      >
                        <div
                          className="P__P-KJbCR hrSHif"
                          color="grayBase"
                        >
                          0
                        </div>
                      </Component>
                    </P>
                  </div>
                </ControlRange__LabelItem>
                <ControlRange__LabelItem>
                  <div
                    className="ControlRange__LabelItem-kiIalK dulPtE"
                  >
                    <P
                      color="grayBase"
                    >
                      <Component
                        className="P__P-KJbCR hrSHif"
                        color="grayBase"
                      >
                        <div
                          className="P__P-KJbCR hrSHif"
                          color="grayBase"
                        >
                          100
                        </div>
                      </Component>
                    </P>
                  </div>
                </ControlRange__LabelItem>
              </div>
            </ControlRange__LabelWrapper>
            <ControlRange__InputWrapper
              labels={
                Array [
                  0,
                  100,
                ]
              }
            >
              <div
                className="ControlRange__InputWrapper-fklkwO fpvHuS"
              >
                <ControlRange__ValueWrapper
                  color="grayBase"
                >
                  <P
                    className="ControlRange__ValueWrapper-jxMKxr kFWjXk"
                    color="grayBase"
                  >
                    <Component
                      className="ControlRange__ValueWrapper-jxMKxr kFWjXk P__P-KJbCR hrSHif"
                      color="grayBase"
                    >
                      <div
                        className="ControlRange__ValueWrapper-jxMKxr kFWjXk P__P-KJbCR hrSHif"
                        color="grayBase"
                      >
                        Current value: 
                        <ControlRange__Value
                          color="primary"
                        >
                          <P
                            className="ControlRange__Value-kXycxr glmUBq"
                            color="primary"
                          >
                            <Component
                              className="ControlRange__Value-kXycxr glmUBq P__P-KJbCR jEbbdW"
                              color="primary"
                            >
                              <p
                                className="ControlRange__Value-kXycxr glmUBq P__P-KJbCR jEbbdW"
                                color="primary"
                              >
                                N/A
                              </p>
                            </Component>
                          </P>
                        </ControlRange__Value>
                      </div>
                    </Component>
                  </P>
                </ControlRange__ValueWrapper>
                <InputRange
                  kind="primary"
                  max={100}
                  min={0}
                  onChange={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  step={1}
                  type="range"
                  value=""
                >
                  <input
                    className="InputRange__InputRange-uGAsR lghldr"
                    kind="primary"
                    max={100}
                    min={0}
                    onChange={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    step={1}
                    type="range"
                    value=""
                  />
                </InputRange>
              </div>
            </ControlRange__InputWrapper>
          </div>
        </ControlRange__Container>
      </ControlRange>
    </div>
  </DataChannelAdapter__Wrapper>
</DataChannelAdapter>
`;

exports[`should render PWM_CONTROL correctly with max 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "lowerbound": 0,
        "upperbound": 100,
      },
      "id": "id",
      "type": "PWM_CONTROL",
      "values": Object {
        "period": 1,
        "value": 100,
      },
    }
  }
  eventHandler={[Function]}
>
  <DataChannelAdapter__Wrapper>
    <div
      className="DataChannelAdapter__Wrapper-kOWMLp jIklWG"
    >
      <ControlPeriod
        onChange={[Function]}
        onSubmit={[Function]}
        placeholder="Integer only"
        value={1}
      >
        <ControlPeriod__Container>
          <div
            className="ControlPeriod__Container-jNmifR bLOshQ"
          >
            <label
              htmlFor="input"
            >
              <P
                color="grayBase"
              >
                <Component
                  className="P__P-KJbCR hrSHif"
                  color="grayBase"
                >
                  <p
                    className="P__P-KJbCR hrSHif"
                    color="grayBase"
                  >
                    Period
                  </p>
                </Component>
              </P>
            </label>
            <ControlPeriod__InputWrapper>
              <div
                className="ControlPeriod__InputWrapper-icIPmx diDDNv"
              >
                <ControlPeriod__StyledInput
                  onChange={[Function]}
                  placeholder="Integer only"
                  type="number"
                  value={1}
                >
                  <Input
                    className="ControlPeriod__StyledInput-fNvBTX jSwXqv"
                    focus={false}
                    kind="primary"
                    onChange={[Function]}
                    placeholder="Integer only"
                    type="number"
                    value={1}
                  >
                    <input
                      className="ControlPeriod__StyledInput-fNvBTX jSwXqv Input__Input-ixjKAz dDXeoZ"
                      kind="primary"
                      onChange={[Function]}
                      placeholder="Integer only"
                      type="number"
                      value={1}
                    />
                  </Input>
                </ControlPeriod__StyledInput>
                <Button
                  active={false}
                  block={false}
                  component="button"
                  disabled={false}
                  kind="primary"
                  onClick={[Function]}
                  round={false}
                  size="normal"
                  square={false}
                >
                  <BaseComponent
                    active={false}
                    block={false}
                    className="Button__Button-jkHDFw fcrwCh"
                    component="button"
                    disabled={false}
                    kind="primary"
                    onClick={[Function]}
                    round={false}
                    size="normal"
                    square={false}
                  >
                    <button
                      className="Button__Button-jkHDFw fcrwCh"
                      onClick={[Function]}
                    >
                      Ok
                    </button>
                  </BaseComponent>
                </Button>
              </div>
            </ControlPeriod__InputWrapper>
          </div>
        </ControlPeriod__Container>
      </ControlPeriod>
      <ControlRange
        labels={
          Array [
            0,
            100,
          ]
        }
        onChange={[Function]}
        onSubmit={[Function]}
        value={100}
        valueMapper={[Function]}
      >
        <ControlRange__Container>
          <div
            className="ControlRange__Container-ispxkc kQpIsI"
          >
            <ControlRange__LabelWrapper
              labels={
                Array [
                  0,
                  100,
                ]
              }
            >
              <div
                className="ControlRange__LabelWrapper-hpKjGx bfHWDZ"
              >
                <ControlRange__LabelItem>
                  <div
                    className="ControlRange__LabelItem-kiIalK dulPtE"
                  >
                    <P
                      color="grayBase"
                    >
                      <Component
                        className="P__P-KJbCR hrSHif"
                        color="grayBase"
                      >
                        <div
                          className="P__P-KJbCR hrSHif"
                          color="grayBase"
                        >
                          0
                        </div>
                      </Component>
                    </P>
                  </div>
                </ControlRange__LabelItem>
                <ControlRange__LabelItem>
                  <div
                    className="ControlRange__LabelItem-kiIalK dulPtE"
                  >
                    <P
                      color="grayBase"
                    >
                      <Component
                        className="P__P-KJbCR hrSHif"
                        color="grayBase"
                      >
                        <div
                          className="P__P-KJbCR hrSHif"
                          color="grayBase"
                        >
                          100
                        </div>
                      </Component>
                    </P>
                  </div>
                </ControlRange__LabelItem>
              </div>
            </ControlRange__LabelWrapper>
            <ControlRange__InputWrapper
              labels={
                Array [
                  0,
                  100,
                ]
              }
            >
              <div
                className="ControlRange__InputWrapper-fklkwO fpvHuS"
              >
                <ControlRange__ValueWrapper
                  color="grayBase"
                >
                  <P
                    className="ControlRange__ValueWrapper-jxMKxr kFWjXk"
                    color="grayBase"
                  >
                    <Component
                      className="ControlRange__ValueWrapper-jxMKxr kFWjXk P__P-KJbCR hrSHif"
                      color="grayBase"
                    >
                      <div
                        className="ControlRange__ValueWrapper-jxMKxr kFWjXk P__P-KJbCR hrSHif"
                        color="grayBase"
                      >
                        Current value: 
                        <ControlRange__Value
                          color="primary"
                        >
                          <P
                            className="ControlRange__Value-kXycxr glmUBq"
                            color="primary"
                          >
                            <Component
                              className="ControlRange__Value-kXycxr glmUBq P__P-KJbCR jEbbdW"
                              color="primary"
                            >
                              <div
                                className="ControlRange__Value-kXycxr glmUBq P__P-KJbCR jEbbdW"
                                color="primary"
                              >
                                100
                              </div>
                            </Component>
                          </P>
                        </ControlRange__Value>
                      </div>
                    </Component>
                  </P>
                </ControlRange__ValueWrapper>
                <InputRange
                  kind="primary"
                  max={100}
                  min={0}
                  onChange={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  step={1}
                  type="range"
                  value={100}
                >
                  <input
                    className="InputRange__InputRange-uGAsR lghldr"
                    kind="primary"
                    max={100}
                    min={0}
                    onChange={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    step={1}
                    type="range"
                    value={100}
                  />
                </InputRange>
              </div>
            </ControlRange__InputWrapper>
          </div>
        </ControlRange__Container>
      </ControlRange>
    </div>
  </DataChannelAdapter__Wrapper>
</DataChannelAdapter>
`;

exports[`should render PWM_CONTROL correctly with zero 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "lowerbound": 0,
        "upperbound": 100,
      },
      "id": "id",
      "type": "PWM_CONTROL",
      "values": Object {
        "period": 0,
        "value": 0,
      },
    }
  }
  eventHandler={[Function]}
>
  <DataChannelAdapter__Wrapper>
    <div
      className="DataChannelAdapter__Wrapper-kOWMLp jIklWG"
    >
      <ControlPeriod
        onChange={[Function]}
        onSubmit={[Function]}
        placeholder="Integer only"
        value={0}
      >
        <ControlPeriod__Container>
          <div
            className="ControlPeriod__Container-jNmifR bLOshQ"
          >
            <label
              htmlFor="input"
            >
              <P
                color="grayBase"
              >
                <Component
                  className="P__P-KJbCR hrSHif"
                  color="grayBase"
                >
                  <p
                    className="P__P-KJbCR hrSHif"
                    color="grayBase"
                  >
                    Period
                  </p>
                </Component>
              </P>
            </label>
            <ControlPeriod__InputWrapper>
              <div
                className="ControlPeriod__InputWrapper-icIPmx diDDNv"
              >
                <ControlPeriod__StyledInput
                  onChange={[Function]}
                  placeholder="Integer only"
                  type="number"
                  value={0}
                >
                  <Input
                    className="ControlPeriod__StyledInput-fNvBTX jSwXqv"
                    focus={false}
                    kind="primary"
                    onChange={[Function]}
                    placeholder="Integer only"
                    type="number"
                    value={0}
                  >
                    <input
                      className="ControlPeriod__StyledInput-fNvBTX jSwXqv Input__Input-ixjKAz dDXeoZ"
                      kind="primary"
                      onChange={[Function]}
                      placeholder="Integer only"
                      type="number"
                      value={0}
                    />
                  </Input>
                </ControlPeriod__StyledInput>
                <Button
                  active={false}
                  block={false}
                  component="button"
                  disabled={false}
                  kind="primary"
                  onClick={[Function]}
                  round={false}
                  size="normal"
                  square={false}
                >
                  <BaseComponent
                    active={false}
                    block={false}
                    className="Button__Button-jkHDFw fcrwCh"
                    component="button"
                    disabled={false}
                    kind="primary"
                    onClick={[Function]}
                    round={false}
                    size="normal"
                    square={false}
                  >
                    <button
                      className="Button__Button-jkHDFw fcrwCh"
                      onClick={[Function]}
                    >
                      Ok
                    </button>
                  </BaseComponent>
                </Button>
              </div>
            </ControlPeriod__InputWrapper>
          </div>
        </ControlPeriod__Container>
      </ControlPeriod>
      <ControlRange
        labels={
          Array [
            0,
            100,
          ]
        }
        onChange={[Function]}
        onSubmit={[Function]}
        value={0}
        valueMapper={[Function]}
      >
        <ControlRange__Container>
          <div
            className="ControlRange__Container-ispxkc kQpIsI"
          >
            <ControlRange__LabelWrapper
              labels={
                Array [
                  0,
                  100,
                ]
              }
            >
              <div
                className="ControlRange__LabelWrapper-hpKjGx bfHWDZ"
              >
                <ControlRange__LabelItem>
                  <div
                    className="ControlRange__LabelItem-kiIalK dulPtE"
                  >
                    <P
                      color="grayBase"
                    >
                      <Component
                        className="P__P-KJbCR hrSHif"
                        color="grayBase"
                      >
                        <div
                          className="P__P-KJbCR hrSHif"
                          color="grayBase"
                        >
                          0
                        </div>
                      </Component>
                    </P>
                  </div>
                </ControlRange__LabelItem>
                <ControlRange__LabelItem>
                  <div
                    className="ControlRange__LabelItem-kiIalK dulPtE"
                  >
                    <P
                      color="grayBase"
                    >
                      <Component
                        className="P__P-KJbCR hrSHif"
                        color="grayBase"
                      >
                        <div
                          className="P__P-KJbCR hrSHif"
                          color="grayBase"
                        >
                          100
                        </div>
                      </Component>
                    </P>
                  </div>
                </ControlRange__LabelItem>
              </div>
            </ControlRange__LabelWrapper>
            <ControlRange__InputWrapper
              labels={
                Array [
                  0,
                  100,
                ]
              }
            >
              <div
                className="ControlRange__InputWrapper-fklkwO fpvHuS"
              >
                <ControlRange__ValueWrapper
                  color="grayBase"
                >
                  <P
                    className="ControlRange__ValueWrapper-jxMKxr kFWjXk"
                    color="grayBase"
                  >
                    <Component
                      className="ControlRange__ValueWrapper-jxMKxr kFWjXk P__P-KJbCR hrSHif"
                      color="grayBase"
                    >
                      <div
                        className="ControlRange__ValueWrapper-jxMKxr kFWjXk P__P-KJbCR hrSHif"
                        color="grayBase"
                      >
                        Current value: 
                        <ControlRange__Value
                          color="primary"
                        >
                          <P
                            className="ControlRange__Value-kXycxr glmUBq"
                            color="primary"
                          >
                            <Component
                              className="ControlRange__Value-kXycxr glmUBq P__P-KJbCR jEbbdW"
                              color="primary"
                            >
                              <div
                                className="ControlRange__Value-kXycxr glmUBq P__P-KJbCR jEbbdW"
                                color="primary"
                              >
                                0
                              </div>
                            </Component>
                          </P>
                        </ControlRange__Value>
                      </div>
                    </Component>
                  </P>
                </ControlRange__ValueWrapper>
                <InputRange
                  kind="primary"
                  max={100}
                  min={0}
                  onChange={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  step={1}
                  type="range"
                  value={0}
                >
                  <input
                    className="InputRange__InputRange-uGAsR lghldr"
                    kind="primary"
                    max={100}
                    min={0}
                    onChange={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    step={1}
                    type="range"
                    value={0}
                  />
                </InputRange>
              </div>
            </ControlRange__InputWrapper>
          </div>
        </ControlRange__Container>
      </ControlRange>
    </div>
  </DataChannelAdapter__Wrapper>
</DataChannelAdapter>
`;
